--- a/meu-primeiro-projeto.html
+++ b/meu-primeiro-projeto.html
@@ -14,7 +14,7 @@
     
     <p>Minha idade é 37 anos</p>
 
-    
+    <img src="https://i.picsum.photos/id/960/600/600.jpg?hmac=IhIhEkzdbDAcmaXRur_FWmkw4bDz4faKhno4GJ65vYg" alt="Imagem da minha página" 
 
 </body>
 </html>                                                                                                         
