mudei a imagem da minha página

--- a/meu-primeiro-projeto.html
+++ b/meu-primeiro-projeto.html
@@ -7,14 +7,14 @@
     <title>Minha página</title>
 </head>
 <body>
-
     <h1>Minha página HTML</h1>
-
-    <p>Meu nome é Diego</p>
+    <img src="https://i.picsum.photos/id/953/800/800.jpg?hmac=sJ0dZ5yEE1gJu2V24wqM_k7F1nkOJrEMDXKKPBWvP20" alt="Imagem da minha página" width="250" height="250">
+   
+    <p> Meu nome é <b>Diego</b> </p>
     
     <p>Minha idade é 37 anos</p>
 
-    <img src="https://i.picsum.photos/id/960/600/600.jpg?hmac=IhIhEkzdbDAcmaXRur_FWmkw4bDz4faKhno4GJ65vYg" alt="Imagem da minha página" 
+    
 
 </body>
 </html>                                                                                                         
