Criado página de imagem

--- a/meu-primeiro-projeto.html
+++ b/meu-primeiro-projeto.html
@@ -7,10 +7,10 @@
     <title>Minha página</title>
 </head>
 <body>
-    <h1>Minha página HTML</h1>
+    <h1>Minha Imagem</h1>
     <img src="https://i.picsum.photos/id/953/800/800.jpg?hmac=sJ0dZ5yEE1gJu2V24wqM_k7F1nkOJrEMDXKKPBWvP20" alt="Imagem da minha página" width="250" height="250">
    
-    <p> Meu nome é <b>Diego</b> </p>
+    
     
     <p>Minha idade é 37 anos</p>
 
